--- a/1Introduction/Part3_Simple_Web_Scraping.ipynb
+++ b/1Introduction/Part3_Simple_Web_Scraping.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "bytes"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "str"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "'<!DOCTYPE html>\\r\\n<!--[if lt IE 7]>      <html class=\"no-js lt-ie9 lt-ie8 lt-ie7\"> <![endif]-->\\r\\n<!--[if IE 7]>         <html class=\"no-js lt-ie9 lt-ie8\"> <![endif]-->\\r\\n<!--[if IE 8]>         <html class=\"no-js lt-ie9\"> <![endif]-->\\r\\n<!--[if IE 9]>         <html class=\"no-js ie9\"> <![endif]-->\\r\\n<!--[if gt IE 9]><!--> <html class=\"no-js\"> <!--<![endif]-->\\r\\n<head profile=\"http://www.w3.org/1999/xhtml/vocab\">\\r\\n\\t<!-- Google Analytics -->\\r\\n\\t<script>\\r\\n\\t    <!-- Global site tag (gtag.js) - Google Analytics respecting DNT -->\\r\\n\\t    if ([true, 1, \\'1\\', \\'on\\', \\'yes\\'].indexOf(navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack) === -1) {\\r\\n\\t        let gtagId=\\'UA-4033468-1\\', sc=document.createElement(\\'script\\');\\r\\n\\t        sc.async=true;\\r\\n\\t        sc.src=\\'https://www.googletagmanager.com/gtag/js?id=\\' + gtagId;\\r\\n\\t        document.head.appendChild(sc);\\r\\n\\t        \\r\\n\\t        window.dataLayer = window.dataLayer || [];\\r\\n\\t        function gtag(){dataLayer.push(arguments);}\\r\\n\\t        gtag(\\'js\\','"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Date': 'Fri, 02 Dec 2022 12:08:47 GMT', 'Server': 'Apache', 'Expires': 'Sun, 19 Nov 1978 05:00:00 GMT', 'Cache-Control': 'no-cache, must-revalidate', 'X-Content-Type-Options': 'nosniff', 'Content-Language': 'fr', 'X-Frame-Options': 'SAMEORIGIN', 'Permissions-Policy': 'interest-cohort=()', 'X-Generator': 'Drupal 7 (http://drupal.org)', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'Content-Length': '17907', 'Keep-Alive': 'timeout=5, max=150', 'Connection': 'Keep-Alive', 'Content-Type': 'text/html; charset=utf-8'}"
+       "{'Date': 'Fri, 02 Dec 2022 13:45:00 GMT', 'Server': 'Apache', 'Expires': 'Sun, 19 Nov 1978 05:00:00 GMT', 'Cache-Control': 'no-cache, must-revalidate', 'X-Content-Type-Options': 'nosniff', 'Content-Language': 'fr', 'X-Frame-Options': 'SAMEORIGIN', 'Permissions-Policy': 'interest-cohort=()', 'X-Generator': 'Drupal 7 (http://drupal.org)', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'Content-Length': '17882', 'Keep-Alive': 'timeout=5, max=150', 'Connection': 'Keep-Alive', 'Content-Type': 'text/html; charset=utf-8'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "b'<!DOCTYPE html>\\r\\n<!--[if lt IE 7]>      <html class=\"no-js lt-ie9 lt-ie8 lt-ie7\"> <![endif]-->\\r\\n<!--[if IE 7]>         <html class=\"no-js lt-ie9 lt-ie8\"> <![endif]-->\\r\\n<!--[if IE 8]>         <html class=\"no-js lt-ie9\"> <![endif]-->\\r\\n<!--[if IE 9]>         <html class=\"no-js ie9\"> <![endif]-->\\r\\n<!--[if gt IE 9]><!--> <html class=\"no-js\"> <!--<![endif]-->\\r\\n<head profile=\"http://www.w3.org/1999/xhtml/vocab\">\\r\\n\\t<!-- Google Analytics -->\\r\\n\\t<script>\\r\\n\\t    <!-- Global site tag (gtag.js) - Google Analytics respecting DNT -->\\r\\n\\t    if ([true, 1, \\'1\\', \\'on\\', \\'yes\\'].indexOf(navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack) === -1) {\\r\\n\\t        let gtagId=\\'UA-4033468-1\\', sc=document.createElement(\\'script\\');\\r\\n\\t        sc.async=true;\\r\\n\\t        sc.src=\\'https://www.googletagmanager.com/gtag/js?id=\\' + gtagId;\\r\\n\\t        document.head.appendChild(sc);\\r\\n\\t        \\r\\n\\t        window.dataLayer = window.dataLayer || [];\\r\\n\\t        function gtag(){dataLayer.push(arguments);}\\r\\n\\t        gtag(\\'js\\','"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,36 +239,46 @@
     "        self.url = url\n",
     "        self.data = 0\n",
     "        \n",
-    "    def request(self):\n",
+    "    def request(self, timeout=10):\n",
     "        try:\n",
-    "            self.data = requests.get(self.url, headers=self.headers, timeout = 10)\n",
-    "            print(f\"Requete effectuée sur {self.url} avec un timeout par défaut de 10 secondes.\")\n",
+    "            self.data = requests.get(self.url, headers=self.headers, timeout = timeout)\n",
+    "            print(f\"Requete effectuée sur {self.url} avec un timeout par défaut de {timeout} secondes.\")\n",
     "        except:\n",
     "            print(\"probleme\")\n",
     "            \n",
-    "    def print_request(self,x):\n",
-    "        print(self.data.content[0:x])\n"
+    "    def get_request(self,x):\n",
+    "        return self.data.text[0:x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requete effectuée sur http://www.esiee.fr/ avec un timeout par défaut de 10 secondes.\n",
-      "b'<!DOCTYPE html>\\r\\n<!--[if lt IE 7]>      <html class=\"no-js lt-ie9 lt-ie8 lt-ie7\"> <![endif]-->\\r\\n<!--[if IE 7]>         <html class=\"no-js lt-ie9 lt-ie8\"> <![endif]-->\\r\\n<!--[if IE 8]>         <html class=\"no-js lt-ie9\"> <![endif]-->\\r\\n<!--[if IE 9]>         <html class=\"no-js ie9\"> <![endif]-->\\r\\n<!--[if gt IE 9]><!--> <html class=\"no-js\"> <!--<![endif]-->\\r\\n<head profile=\"http://www.w3.org/1999/xhtml/vocab\">\\r\\n\\t<!-- Google Analytics -->\\r\\n\\t<script>\\r\\n\\t    <!-- Global site tag (gtag.js) - Google Analytics respecting DNT -->\\r\\n\\t    if ([true, 1, \\'1\\', \\'on\\', \\'yes\\'].indexOf(navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack) === -1) {\\r\\n\\t        let gtagId=\\'UA-4033468-1\\', sc=document.createElement(\\'script\\');\\r\\n\\t        sc.async=true;\\r\\n\\t        sc.src=\\'https://www.googletagmanager.com/gtag/js?id=\\' + gtagId;\\r\\n\\t        document.head.appendChild(sc);\\r\\n\\t        \\r\\n\\t        window.dataLayer = window.dataLayer || [];\\r\\n\\t        function gtag(){dataLayer.push(arguments);}\\r\\n\\t        gtag(\\'js\\','\n"
+      "Requete effectuée sur http://www.esiee.fr/ avec un timeout par défaut de 20 secondes.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE html>\\r\\n<!--[if lt IE 7]>      <html class=\"no-js lt-ie9 lt-ie8 lt-ie7\"> <![endif]-->\\r\\n<!--[if IE 7]>         <html class=\"no-js lt-ie9 lt-ie8\"> <![endif]-->\\r\\n<!--[if IE 8]>         <html class=\"no-js lt-ie9\"> <![endif]-->\\r\\n<!--[if IE 9]>         <html class=\"no-js ie9\"> <![endif]-->\\r\\n<!--[if gt IE 9]><!--> <html class=\"no-js\"> <!--<![endif]-->\\r\\n<head profile=\"http://www.w3.org/1999/xhtml/vocab\">\\r\\n\\t<!-- Google Analytics -->\\r\\n\\t<script>\\r\\n\\t    <!-- Global site tag (gtag.js) - Google Analytics respecting DNT -->\\r\\n\\t    if ([true, 1, \\'1\\', \\'on\\', \\'yes\\'].indexOf(navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack) === -1) {\\r\\n\\t        let gtagId=\\'UA-4033468-1\\', sc=document.createElement(\\'script\\');\\r\\n\\t        sc.async=true;\\r\\n\\t        sc.src=\\'https://www.googletagmanager.com/gtag/js?id=\\' + gtagId;\\r\\n\\t        document.head.appendChild(sc);\\r\\n\\t        \\r\\n\\t        window.dataLayer = window.dataLayer || [];\\r\\n\\t        function gtag(){dataLayer.push(arguments);}\\r\\n\\t        gtag(\\'js\\', new Date());\\r\\n\\t        gtag(\\'config\\', gtagId);\\r\\n\\t    }\\r\\n\\t</script>\\r\\n\\t<!-- Google Tag Manager -->\\r\\n\\t<script>\\r\\n\\t\\t(function(w,d,s,l,i){\\r\\n\\t\\t\\tw[l]=w[l]||[];w[l].push({\\'gtm.start\\':new Date().getTime(),event:\\'gtm.js\\'});\\r\\n\\t\\t\\tvar f=d.getElementsByTagName(s)[0],\\tj=d.createElement(s),dl=l!=\\'dataLayer\\'?\\'&l=\\'+l:\\'\\';\\r\\n\\t\\t\\tj.async=true;\\r\\n\\t\\t\\tj.src=\\'https://www.googletagmanager.com/gtm.js?id=\\'+i+dl;f.parentNode.insertBefore(j,f);\\r\\n\\t\\t\\t}\\r\\n\\t\\t)\\r\\n\\t\\t(window,document,\\'script\\',\\'dataLayer\\',\\'GTM-MQF5LJB\\');\\r\\n\\t</script>\\r\\n\\t<!-- End Google Tag Manager -->\\r\\n  <meta name=\"google-site-verification\" content=\"JnG7DTdhQuWTeSHlWC63CeWpb3WValiOorksYjoYOWI\" />\\r\\n  <meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />\\n<meta name=\"Generator\" content=\"Drupal 7 (http://drupal.org)\" />\\n<meta name=\"description\" content=\"ESIEE Paris, l’école de l’innovation technologique | Grande école d’ingénieurs\\r\\nForme dans les domaines des technologies du numérique - Habilitée CTI.\" />\\n<link rel=\"shortcut icon\" href=\"https://www.e'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "requete = HTTP(\"http://www.esiee.fr/\")\n",
     "\n",
-    "requete.request()\n",
-    "requete.print_request(1000)\n"
+    "requete.request(20)\n",
+    "req = requete.get_request(2000)\n",
+    "req\n"
    ]
   },
   {
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,15 +304,29 @@
     "    print(res)\n",
     "    \n",
     "def clear_html(html):\n",
-    "    l = ['']\n",
+    "    l = [\"'\",\"/\",\"-\"]\n",
+    "    res = html.replace(l,\"\")\n",
     "    res = no_space(html)\n",
-    "    \n",
-    "    "
+    "    print(res)\n",
+    "\n",
+    "def get_domain(url):\n",
+    "    j = 0\n",
+    "    domain = \"\"\n",
+    "    for i in range(len(url)):\n",
+    "        if url[i] == '/':\n",
+    "            if url[i+1] != '/':\n",
+    "                j = i+1\n",
+    "                while url[j] != \"/\":\n",
+    "                    domain += url[j]\n",
+    "                    j += 1\n",
+    "                break\n",
+    "            \n",
+    "    return domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -311,11 +335,23 @@
      "text": [
       "ceci est un test\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'stackoverflow.com'"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "ggg = \"ceci     est  un     test\"\n",
-    "no_space(ggg)"
+    "no_space(ggg)\n",
+    "\n",
+    "get_domain( \"https://stackoverflow.com/questions/3939361/remove-specific-characters-from-a-string-in-python\")"
    ]
   },
   {
