--- a/4Redis/Introduction.ipynb
+++ b/4Redis/Introduction.ipynb
@@ -66,6 +66,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: redis in /root/.local/share/virtualenvs/code-AFz48Hjb/lib/python3.8/site-packages (4.4.1)\n",
+      "Requirement already satisfied: async-timeout>=4.0.2 in /root/.local/share/virtualenvs/code-AFz48Hjb/lib/python3.8/site-packages (from redis) (4.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install redis"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-04T08:25:39.071270Z",
@@ -90,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-04T08:25:39.317259Z",
@@ -111,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-04T08:25:40.167383Z",
@@ -125,7 +144,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-04T08:25:40.857904Z",
@@ -154,116 +173,201 @@
     {
      "data": {
       "text/plain": [
-       "{'dbfilename': 'dump.rdb',\n",
-       " 'requirepass': '',\n",
-       " 'masterauth': '',\n",
-       " 'cluster-announce-ip': '',\n",
-       " 'unixsocket': '',\n",
+       "{'stop-writes-on-bgsave-error': 'yes',\n",
+       " 'latency-tracking-info-percentiles': '50 99 99.9',\n",
+       " 'active-defrag-cycle-max': '25',\n",
+       " 'stream-node-max-entries': '100',\n",
+       " 'repl-diskless-sync-max-replicas': '0',\n",
+       " 'replica-serve-stale-data': 'yes',\n",
+       " 'sanitize-dump-payload': 'no',\n",
+       " 'set-max-intset-entries': '512',\n",
+       " 'databases': '16',\n",
+       " 'repl-disable-tcp-nodelay': 'no',\n",
+       " 'bind-source-addr': '',\n",
        " 'logfile': '',\n",
-       " 'pidfile': '',\n",
-       " 'slave-announce-ip': '',\n",
-       " 'replica-announce-ip': '',\n",
-       " 'maxmemory': '0',\n",
-       " 'proto-max-bulk-len': '536870912',\n",
-       " 'client-query-buffer-limit': '1073741824',\n",
-       " 'maxmemory-samples': '5',\n",
-       " 'lfu-log-factor': '10',\n",
-       " 'lfu-decay-time': '1',\n",
-       " 'timeout': '0',\n",
-       " 'active-defrag-threshold-lower': '10',\n",
+       " 'rdb-del-sync-files': 'no',\n",
+       " 'activedefrag': 'no',\n",
+       " 'propagation-error-behavior': 'ignore',\n",
+       " 'always-show-logo': 'no',\n",
+       " 'replica-ignore-disk-write-errors': 'no',\n",
+       " 'io-threads-do-reads': 'no',\n",
+       " 'daemonize': 'no',\n",
+       " 'oom-score-adj': 'no',\n",
+       " 'tls-client-key-file': '',\n",
+       " 'cluster-announce-tls-port': '0',\n",
+       " 'tls-auth-clients': 'yes',\n",
+       " 'slave-announce-port': '0',\n",
+       " 'no-appendfsync-on-rewrite': 'no',\n",
+       " 'cluster-require-full-coverage': 'yes',\n",
        " 'active-defrag-threshold-upper': '100',\n",
-       " 'active-defrag-ignore-bytes': '104857600',\n",
-       " 'active-defrag-cycle-min': '5',\n",
-       " 'active-defrag-cycle-max': '75',\n",
+       " 'latency-tracking': 'yes',\n",
+       " 'unixsocket': '',\n",
+       " 'tls-port': '0',\n",
+       " 'hash-max-listpack-value': '64',\n",
+       " 'tls-prefer-server-ciphers': 'no',\n",
+       " 'replica-priority': '100',\n",
+       " 'maxclients': '10000',\n",
+       " 'requirepass': '',\n",
+       " 'lua-time-limit': '5000',\n",
+       " 'tls-ciphers': '',\n",
+       " 'replica-announced': 'yes',\n",
+       " 'tcp-backlog': '511',\n",
+       " 'cluster-announce-port': '0',\n",
+       " 'active-expire-effort': '1',\n",
+       " 'replica-lazy-flush': 'no',\n",
+       " 'client-output-buffer-limit': 'normal 0 0 0 slave 268435456 67108864 60 pubsub 33554432 8388608 60',\n",
+       " 'replicaof': '',\n",
+       " 'lazyfree-lazy-expire': 'no',\n",
+       " 'repl-backlog-size': '1048576',\n",
+       " 'list-max-ziplist-size': '-2',\n",
+       " 'zset-max-ziplist-value': '64',\n",
+       " 'syslog-facility': 'local0',\n",
+       " 'list-compress-depth': '0',\n",
+       " 'appendfilename': 'appendonly.aof',\n",
+       " 'cluster-announce-bus-port': '0',\n",
+       " 'io-threads': '1',\n",
+       " 'aof-rewrite-incremental-fsync': 'yes',\n",
+       " 'save': '3600 1 300 100 60 10000',\n",
+       " 'maxmemory-policy': 'noeviction',\n",
+       " 'tls-session-caching': 'yes',\n",
+       " 'slowlog-max-len': '128',\n",
+       " 'cluster-allow-reads-when-down': 'no',\n",
+       " 'cluster-preferred-endpoint-type': 'ip',\n",
+       " 'pidfile': '',\n",
+       " 'shutdown-on-sigterm': 'default',\n",
+       " 'active-defrag-cycle-min': '1',\n",
+       " 'slave-read-only': 'yes',\n",
+       " 'acllog-max-len': '128',\n",
+       " 'bio_cpulist': '',\n",
+       " 'aof-timestamp-enabled': 'no',\n",
+       " 'stream-node-max-bytes': '4096',\n",
+       " 'cluster-config-file': 'nodes.conf',\n",
+       " 'syslog-enabled': 'no',\n",
+       " 'tls-cluster': 'no',\n",
+       " 'repl-backlog-ttl': '3600',\n",
+       " 'maxmemory-samples': '5',\n",
+       " 'jemalloc-bg-thread': 'yes',\n",
+       " 'repl-diskless-load': 'disabled',\n",
+       " 'dbfilename': 'dump.rdb',\n",
+       " 'min-slaves-to-write': '0',\n",
+       " 'slave-priority': '100',\n",
+       " 'tls-ca-cert-file': '',\n",
+       " 'crash-log-enabled': 'yes',\n",
+       " 'slave-lazy-flush': 'no',\n",
+       " 'loglevel': 'notice',\n",
+       " 'shutdown-timeout': '10',\n",
+       " 'hz': '10',\n",
+       " 'slave-ignore-maxmemory': 'yes',\n",
+       " 'min-replicas-max-lag': '10',\n",
+       " 'tls-dh-params-file': '',\n",
+       " 'masterauth': '',\n",
+       " 'replica-read-only': 'yes',\n",
+       " 'enable-protected-configs': 'no',\n",
+       " 'replica-ignore-maxmemory': 'yes',\n",
+       " 'tls-ciphersuites': '',\n",
+       " 'cluster-slave-validity-factor': '10',\n",
+       " 'shutdown-on-sigint': 'default',\n",
+       " 'crash-memcheck-enabled': 'yes',\n",
+       " 'rdbcompression': 'yes',\n",
+       " 'tls-replication': 'no',\n",
+       " 'cluster-replica-no-failover': 'no',\n",
+       " 'repl-ping-slave-period': '10',\n",
+       " 'slaveof': '',\n",
+       " 'lazyfree-lazy-server-del': 'no',\n",
+       " 'lazyfree-lazy-eviction': 'no',\n",
+       " 'rdbchecksum': 'yes',\n",
+       " 'enable-debug-command': 'no',\n",
+       " 'min-replicas-to-write': '0',\n",
+       " 'lazyfree-lazy-user-flush': 'no',\n",
+       " 'cluster-allow-pubsubshard-when-down': 'yes',\n",
+       " 'tls-session-cache-size': '20480',\n",
        " 'active-defrag-max-scan-fields': '1000',\n",
        " 'auto-aof-rewrite-percentage': '100',\n",
-       " 'auto-aof-rewrite-min-size': '67108864',\n",
-       " 'hash-max-ziplist-entries': '512',\n",
-       " 'hash-max-ziplist-value': '64',\n",
-       " 'stream-node-max-bytes': '4096',\n",
-       " 'stream-node-max-entries': '100',\n",
-       " 'list-max-ziplist-size': '-2',\n",
-       " 'list-compress-depth': '0',\n",
-       " 'set-max-intset-entries': '512',\n",
-       " 'zset-max-ziplist-entries': '128',\n",
-       " 'zset-max-ziplist-value': '64',\n",
-       " 'hll-sparse-max-bytes': '3000',\n",
-       " 'lua-time-limit': '5000',\n",
-       " 'slowlog-log-slower-than': '10000',\n",
-       " 'latency-monitor-threshold': '0',\n",
-       " 'slowlog-max-len': '128',\n",
-       " 'port': '6379',\n",
-       " 'cluster-announce-port': '0',\n",
-       " 'cluster-announce-bus-port': '0',\n",
-       " 'tcp-backlog': '511',\n",
-       " 'databases': '16',\n",
-       " 'repl-ping-slave-period': '10',\n",
-       " 'repl-ping-replica-period': '10',\n",
-       " 'repl-timeout': '60',\n",
-       " 'repl-backlog-size': '1048576',\n",
-       " 'repl-backlog-ttl': '3600',\n",
-       " 'maxclients': '10000',\n",
-       " 'watchdog-period': '0',\n",
-       " 'slave-priority': '100',\n",
-       " 'replica-priority': '100',\n",
-       " 'slave-announce-port': '0',\n",
-       " 'replica-announce-port': '0',\n",
-       " 'min-slaves-to-write': '0',\n",
-       " 'min-replicas-to-write': '0',\n",
-       " 'min-slaves-max-lag': '10',\n",
-       " 'min-replicas-max-lag': '10',\n",
-       " 'hz': '10',\n",
-       " 'cluster-node-timeout': '15000',\n",
-       " 'cluster-migration-barrier': '1',\n",
-       " 'cluster-slave-validity-factor': '10',\n",
-       " 'cluster-replica-validity-factor': '10',\n",
-       " 'repl-diskless-sync-delay': '5',\n",
-       " 'tcp-keepalive': '300',\n",
-       " 'cluster-require-full-coverage': 'yes',\n",
-       " 'cluster-slave-no-failover': 'no',\n",
-       " 'cluster-replica-no-failover': 'no',\n",
-       " 'no-appendfsync-on-rewrite': 'no',\n",
-       " 'slave-serve-stale-data': 'yes',\n",
-       " 'replica-serve-stale-data': 'yes',\n",
-       " 'slave-read-only': 'yes',\n",
-       " 'replica-read-only': 'yes',\n",
-       " 'slave-ignore-maxmemory': 'yes',\n",
-       " 'replica-ignore-maxmemory': 'yes',\n",
-       " 'stop-writes-on-bgsave-error': 'yes',\n",
-       " 'daemonize': 'no',\n",
-       " 'rdbcompression': 'yes',\n",
-       " 'rdbchecksum': 'yes',\n",
+       " 'syslog-ident': 'redis',\n",
+       " 'hash-max-listpack-entries': '512',\n",
+       " 'client-query-buffer-limit': '1073741824',\n",
+       " 'lfu-decay-time': '1',\n",
+       " 'bind': '* -::*',\n",
+       " 'cluster-announce-ip': '',\n",
+       " 'appenddirname': 'appendonlydir',\n",
+       " 'aclfile': '',\n",
+       " 'replica-announce-ip': '',\n",
        " 'activerehashing': 'yes',\n",
-       " 'activedefrag': 'no',\n",
-       " 'protected-mode': 'no',\n",
-       " 'repl-disable-tcp-nodelay': 'no',\n",
-       " 'repl-diskless-sync': 'no',\n",
-       " 'aof-rewrite-incremental-fsync': 'yes',\n",
-       " 'rdb-save-incremental-fsync': 'yes',\n",
-       " 'aof-load-truncated': 'yes',\n",
-       " 'aof-use-rdb-preamble': 'yes',\n",
-       " 'lazyfree-lazy-eviction': 'no',\n",
-       " 'lazyfree-lazy-expire': 'no',\n",
-       " 'lazyfree-lazy-server-del': 'no',\n",
-       " 'slave-lazy-flush': 'no',\n",
-       " 'replica-lazy-flush': 'no',\n",
        " 'dynamic-hz': 'yes',\n",
-       " 'maxmemory-policy': 'noeviction',\n",
-       " 'loglevel': 'notice',\n",
-       " 'supervised': 'no',\n",
-       " 'appendfsync': 'everysec',\n",
-       " 'syslog-facility': 'local0',\n",
+       " 'repl-diskless-sync-delay': '5',\n",
+       " 'tls-client-cert-file': '',\n",
+       " 'masteruser': '',\n",
+       " 'tls-session-cache-timeout': '300',\n",
+       " 'proto-max-bulk-len': '536870912',\n",
        " 'appendonly': 'no',\n",
-       " 'dir': '/data',\n",
-       " 'save': '3600 1 300 100 60 10000',\n",
-       " 'client-output-buffer-limit': 'normal 0 0 0 slave 268435456 67108864 60 pubsub 33554432 8388608 60',\n",
        " 'unixsocketperm': '0',\n",
-       " 'slaveof': '',\n",
+       " 'tls-protocols': '',\n",
+       " 'lazyfree-lazy-user-del': 'no',\n",
+       " 'cluster-announce-hostname': '',\n",
+       " 'active-defrag-ignore-bytes': '104857600',\n",
+       " 'busy-reply-threshold': '5000',\n",
+       " 'dir': '/data',\n",
+       " 'socket-mark-id': '0',\n",
+       " 'maxmemory': '0',\n",
+       " 'repl-diskless-sync': 'yes',\n",
+       " 'aof-use-rdb-preamble': 'yes',\n",
+       " 'list-max-listpack-size': '-2',\n",
+       " 'tls-key-file-pass': '',\n",
+       " 'tls-ca-cert-dir': '',\n",
+       " 'tls-key-file': '',\n",
+       " 'cluster-enabled': 'no',\n",
+       " 'tls-client-key-file-pass': '',\n",
+       " 'cluster-link-sendbuf-limit': '0',\n",
+       " 'cluster-allow-replica-migration': 'yes',\n",
+       " 'timeout': '0',\n",
+       " 'latency-monitor-threshold': '0',\n",
+       " 'rdb-save-incremental-fsync': 'yes',\n",
+       " 'port': '6379',\n",
+       " 'zset-max-listpack-value': '64',\n",
+       " 'aof-disable-auto-gc': 'no',\n",
+       " 'proc-title-template': '{title} {listen-addr} {server-mode}',\n",
+       " 'lfu-log-factor': '10',\n",
+       " 'tracking-table-max-keys': '1000000',\n",
+       " 'disable-thp': 'yes',\n",
+       " 'acl-pubsub-default': 'resetchannels',\n",
        " 'notify-keyspace-events': '',\n",
-       " 'bind': ''}"
+       " 'supervised': 'no',\n",
+       " 'ignore-warnings': '',\n",
+       " 'repl-timeout': '60',\n",
+       " 'maxmemory-eviction-tenacity': '10',\n",
+       " 'protected-mode': 'no',\n",
+       " 'replica-announce-port': '0',\n",
+       " 'oom-score-adj-values': '0 200 800',\n",
+       " 'slave-announce-ip': '',\n",
+       " 'cluster-migration-barrier': '1',\n",
+       " 'maxmemory-clients': '0',\n",
+       " 'min-slaves-max-lag': '10',\n",
+       " 'hll-sparse-max-bytes': '3000',\n",
+       " 'auto-aof-rewrite-min-size': '67108864',\n",
+       " 'tcp-keepalive': '300',\n",
+       " 'server_cpulist': '',\n",
+       " 'aof-load-truncated': 'yes',\n",
+       " 'zset-max-ziplist-entries': '128',\n",
+       " 'cluster-replica-validity-factor': '10',\n",
+       " 'zset-max-listpack-entries': '128',\n",
+       " 'hash-max-ziplist-value': '64',\n",
+       " 'cluster-slave-no-failover': 'no',\n",
+       " 'cluster-port': '0',\n",
+       " 'bgsave_cpulist': '',\n",
+       " 'repl-ping-replica-period': '10',\n",
+       " 'set-proc-title': 'yes',\n",
+       " 'slave-serve-stale-data': 'yes',\n",
+       " 'hash-max-ziplist-entries': '512',\n",
+       " 'aof_rewrite_cpulist': '',\n",
+       " 'appendfsync': 'everysec',\n",
+       " 'cluster-node-timeout': '15000',\n",
+       " 'tls-cert-file': '',\n",
+       " 'enable-module-command': 'no',\n",
+       " 'active-defrag-threshold-lower': '10',\n",
+       " 'slowlog-log-slower-than': '10000'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1236,7 +1340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.16"
   },
   "varInspector": {
    "cols": {
